# composhed

./: README.md  main.py  pyproject.toml  synthetic_attributes.csv
composhed/: assembly.py  data.py  evaluate.py  generate.py  generate_mdcev.py  train.py  train_mdcev.py
composhed/models/: anchor.py  atype.py  dap.py  duration.py  mandatory.py  mdcev.py
compsched/: generate.py  train.py
compsched/models/: duration.py  ntours.py
models/: compsched_models.pkl
tests/: test_integration.py
