[project]
name = "composhed"
version = "0.1.0"
description = "Composhed: compositional activity schedule baseline model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "joblib",
    "biogeme",
]

[project.scripts]
compsched-train = "composhed.train:main"
compsched-generate = "composhed.generate:main"
compsched-train-mdcev = "composhed.train_mdcev:main"
compsched-generate-mdcev = "composhed.generate_mdcev:main"

[dependency-groups]
dev = ["jupyter", "ipykernel"]

[tool.hatch.build.targets.wheel]
packages = ["composhed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
